--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "pebblecms/backoffice",
-  "description": "Pebble backoffice",
+  "description": "Pebble Backoffice presets",
   "keywords": [
     "cms",
     "backoffice",
@@ -20,26 +20,14 @@
   ],
   "require": {
     "php" : "^7.3",
-    "illuminate/database": "^6.0",
+    "illuminate/console": "^6.0",
+    "illuminate/filesystem": "^6.0",
     "illuminate/support": "^6.0"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^8.4",
-    "orchestra/testbench": "^4.0"
   },
   "autoload": {
     "psr-4": {
       "Pebble\\Backoffice\\": "src"
     }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Pebble\\Backoffice\\Tests\\": "tests"
-    }
-  },
-  "scripts": {
-    "test": "vendor/bin/phpunit",
-    "test-coverage": "phpunit --coverage-html coverage"
   },
   "config": {
     "sort-packages": true
